# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\LanguageController;
 use App\Http\Controllers\Api\AccessLogController;
+use App\Http\Controllers\API\DJController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -19,5 +20,7 @@ Route::get('/translations/all/{langCode}', [LanguageController::class, 'translat
 Route::middleware('auth:sanctum')->group(function () {
 
     Route::get('/access-logs', [AccessLogController::class, 'index']);
+    Route::get('/djs', [DJController::class, 'index']);
+    Route::get('/djs/{id}', [DJController::class, 'show']);
 
 });
